# eruptrace-rs

./: .gitignore  Cargo.toml  README.md  build_shaders.sh  fmt_check.sh  rustfmt.toml
eruptrace_deferred/: Cargo.toml
eruptrace_deferred/src/: gbuffers.rs  geometry_pass.rs  lib.rs  lighting_pass.rs
eruptrace_deferred/src/geometry_pass/: mod.rs
eruptrace_deferred/src/geometry_pass/shaders/: mesh.frag  mesh.vert  mesh_frag.spv  mod.rs
eruptrace_deferred/src/lighting_pass/: mod.rs
eruptrace_deferred/src/shaders/: lighting.comp  lighting.frag  lighting_comp.spv  lighting_frag.spv  mesh.frag  mesh_frag.spv  mesh_vert.spv  mod.rs
eruptrace_pure/: Cargo.toml
eruptrace_pure/shaders/: image.frag  image_frag.spv
eruptrace_pure/src/: camera.rs  lib.rs  render_surface.rs  scene.rs  shaders.rs
eruptrace_pure/src/shaders/: image.frag  image_frag.spv  mod.rs
eruptrace_scene/: Cargo.toml
eruptrace_scene/src/: bih.rs  camera.rs  example_scenes.rs  json.rs  lib.rs  materials.rs  mesh.rs  primitives.rs  shapes.rs
eruptrace_vk/: Cargo.toml
eruptrace_vk/src/: buffer.rs  command.rs  contexts.rs  debug.rs  image.rs  lib.rs  pipeline.rs  push_constants.rs  shader.rs  std140.rs
example_scenes/bunny/: camera.json  scene.json
example_scenes/cornell-box/: camera.json  scene.json
example_scenes/cube/: camera.json  scene.json
example_scenes/spheres_day/: camera.json  scene.json
example_scenes/spheres_night/: scene.json
glsl_include/: constants.glsl  ray_tracing.glsl  structs.glsl  utils.glsl
shaders/: compute.comp  image.frag  raytracer.comp
src/: camera.rs  colour.rs  lib.rs  main.rs  materials.rs  primitives.rs  render.rs  render_surface.rs  scene.rs  shaders.rs  trace.rs  vulkan_context.rs
src/gui/: integration.rs  mesh.rs  mod.rs  widgets.rs
src/shaders/: gui_mesh.frag  gui_mesh.vert  mod.rs  surface.frag  surface.vert  surface_frag.spv  surface_vert.spv
