[workspace]

members = [
    "eruptrace_deferred",
    "eruptrace_pure",
    "eruptrace_scene",
    "eruptrace_vk",
]

[package]
name = "eruptrace-rs"
version = "0.1.0"
authors = ["Adam Gąsior"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eruptrace_deferred = { path = "eruptrace_deferred" }
eruptrace_pure = { path = "eruptrace_pure" }
eruptrace_scene = { path = "eruptrace_scene" }
eruptrace_vk = { path = "eruptrace_vk" }

erupt = "0.22"
erupt-bootstrap = "0.2.3"
vk-mem-erupt = { git = "https://github.com/HindrikStegenga/vk-mem-erupt" }

anyhow = "1.0"
itertools = "0.10"
nalgebra-glm = "0.16"
pico-args = "0.4"
winit = "0.26"
