[workspace]

members = [
    "eruptrace_deferred",
    "eruptrace_pure",
    "eruptrace_scene",
    "eruptrace_vk",
]

[package]
name = "eruptrace-rs"
version = "0.1.0"
authors = ["Adam Gąsior"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eruptrace_deferred = { path = "eruptrace_deferred" }
eruptrace_pure = { path = "eruptrace_pure" }
eruptrace_scene = { path = "eruptrace_scene" }
eruptrace_vk = { path = "eruptrace_vk" }

erupt = "0.23"
erupt-bootstrap = { git = "https://gitlab.com/Adanos020/erupt-bootstrap" }
vk-mem-3-erupt = "0.6"
egui = "0.24"
egui-winit = "0.24"

anyhow = "1.0"
itertools = "0.12"
nalgebra-glm = "0.18"
pico-args = "0.5"
winit = "0.28"
