[workspace]

members = [
    "eruptrace_deferred",
    "eruptrace_pure",
    "eruptrace_scene",
    "eruptrace_vk",
]

[package]
name = "eruptrace-rs"
version = "0.1.0"
authors = ["Adam Gąsior"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eruptrace_deferred = { path = "eruptrace_deferred" }
eruptrace_pure = { path = "eruptrace_pure" }
eruptrace_scene = { path = "eruptrace_scene" }
eruptrace_vk = { path = "eruptrace_vk" }

erupt = { git = "https://gitlab.com/Adanos020/erupt" }
erupt-bootstrap = { git = "https://gitlab.com/Adanos020/erupt-bootstrap" }
vk-mem-3-erupt = { git = "https://github.com/Adanos020/vk-mem-3-erupt" }

egui = "0.29"
egui-winit = "0.29"

anyhow = "1.0"
itertools = "0.13"
nalgebra-glm = "0.19"
pico-args = "0.5"
winit = "0.30"
