[package]
name = "eruptrace_deferred"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

eruptrace_scene = { path = "../eruptrace_scene" }
eruptrace_vk = { path = "../eruptrace_vk" }

erupt = "0.22"
vk-mem-erupt = { git = "https://github.com/HindrikStegenga/vk-mem-erupt" }
std140 = "0.2"

itertools = "0.12"

nalgebra-glm = "0.16"
