[package]
name = "eruptrace_pure"
version = "0.1.0"
authors = ["Adam Gąsior"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eruptrace_scene = { path = "../eruptrace_scene" }
eruptrace_vk = { path = "../eruptrace_vk" }

erupt = "0.22"
vk-mem-erupt = { git = "https://github.com/HindrikStegenga/vk-mem-erupt" }

itertools = "0.10"
image = "0.24"
nalgebra-glm = "0.16"
std140 = "0.2"

winit = "0.26"
