[package]
name = "eruptrace_pure"
version = "0.1.0"
authors = ["Adam Gąsior"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eruptrace_scene = { path = "../eruptrace_scene" }
eruptrace_vk = { path = "../eruptrace_vk" }

erupt = { git = "https://gitlab.com/Adanos020/erupt" }
vk-mem-3-erupt = { git = "https://github.com/Adanos020/vk-mem-3-erupt" }

itertools = "0.13"
image = "0.25"
nalgebra-glm = "0.19"
std140 = "0.2"

winit = "0.30"
