[package]
name = "eruptrace_scene"
version = "0.1.0"
authors = ["Adam Gąsior"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eruptrace_vk = { path = "../eruptrace_vk" }

erupt = "0.22"
vk-mem-erupt = { git = "https://github.com/HindrikStegenga/vk-mem-erupt" }

anyhow = "1.0"
image = "0.24"
itertools = "0.10"
nalgebra-glm = "0.16"
obj-rs = "0.7"
serde_json = "1.0"
std140 = "0.2"
