[package]
name = "eruptrace_scene"
version = "0.1.0"
authors = ["Adam Gąsior"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eruptrace_vk = { path = "../eruptrace_vk" }

erupt = "0.23"
vk-mem-3-erupt = "0.6"

anyhow = "1.0"
enumn = "0.1"
image = "0.24"
itertools = "0.12"
nalgebra-glm = "0.18"
obj-rs = "0.7"
serde_json = "1.0"
std140 = "0.2"
