[package]
name = "eruptrace_vk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erupt = "0.22"
vk-mem-erupt = { git = "https://github.com/HindrikStegenga/vk-mem-erupt" }

itertools = "0.10"
num-integer = "0.1"
nalgebra-glm = "0.16"
std140 = "0.2"
