[package]
name = "eruptrace_vk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erupt = "0.23"
vk-mem-3-erupt = "0.6"

bitflags = "2.4"
itertools = "0.12"
num-integer = "0.1"
nalgebra-glm = "0.18"
std140 = "0.2"
