[package]
name = "eruptrace_vk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erupt = { git = "https://gitlab.com/Adanos020/erupt" }
vk-mem-3-erupt = { git = "https://github.com/Adanos020/vk-mem-3-erupt" }

bitflags = "1.3"
itertools = "0.13"
num-integer = "0.1"
nalgebra-glm = "0.19"
std140 = "0.2"
